--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
     <link rel="icon" type="image/svg+xml" sizes="32x32" href="/sparkles.svg">
     <link rel="icon" type="image/svg+xml" sizes="16x16" href="/sparkles.svg">
     <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Resource Hints -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- Critical CSS -->
+    <link rel="preload" href="/src/index.css" as="style">
+    
+    <!--app-head-->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -55,7 +64,7 @@
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root"><!--app-html--></div>
+    <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
